# multiplex-tonic-hyper

./: Cargo.toml  LICENSE  README.md
examples/: hello_world_client.rs  hello_world_server.rs
hello-world-tonic/: Cargo.toml
hello-world-tonic/src/: lib.rs
multiplex_tonic_hyper/: Cargo.toml
multiplex_tonic_hyper/src/: lib.rs
multiplex_tonic_hyper/tests/: multiplexer_with_fake_services.rs
multiplex_tonic_hyper/tests/common/: hello_world.rs  svc.rs
src/: lib.rs  make.rs
tests/: multiplexer_with_fake_services.rs
tests/common/: mod.rs  svc.rs
