[package]
name = "multiplex_tonic_hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }