[package]
name = "multiplex-tonic-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.13"
hyper = "0.14.20"
pin-project = "1.0.12"

[dev-dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"